logs/Opencv/build.make.005.log.stderr
[1m/Users/yeontaemin/github/algorithm_ws/src/Opencv/src/opencv_tuto/Flipmat.cpp:6:17: [0m[0;1;31merror: [0m[1mmember reference base type 'uchar *' (aka 'unsigned char *') is not a structure or union[0m
    if(!src.data.empty){
[0;1;32m        ~~~~~~~~^~~~~~
[0m1 error generated.
make[2]: *** [CMakeFiles/Opencv.dir/build.make:76: CMakeFiles/Opencv.dir/src/opencv_tuto/Flipmat.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:245: CMakeFiles/Opencv.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
